Edit wechat icon url

--- a/v1/index.html
+++ b/v1/index.html
@@ -147,7 +147,7 @@
       <div class="small-12 medium-6 columns">
         <ul class="social-list">
           <li><a href="#"><img src="img/facebook.svg" style="width:30px;"></a></li>
-          <li><a href="#"><img src="../img/wechat.svg" style="width:30px;"></a></li>
+          <li><a href="#"><img src="img/wechat.svg" style="width:30px;"></a></li>
           <li><a href="#"><img src="img/alibaba.svg" style="width:50px;"></a></li>
           <li><a href="#"><img src="img/taobao.svg" style="width:30px;"></a></li>
         </ul>
