Update OG image

--- a/v1/index.html
+++ b/v1/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Toilet Accessories Manufacturer in Singapore | Lifa Ceramics" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://lifasg.com" />
-    <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="img/og.jpg" />
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
