--- a/v1/index.html
+++ b/v1/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Lifa is a toilet accessories manufacturer in Singapore that provides a wide range of modern and high-quality sanitary ware. We produce sanitary ware with great aesthetics at a competitive price point." />
     <meta property="og:title" content="Toilet Accessories Manufacturer in Singapore | Lifa Ceramics" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://lifasg.com" />
-    <meta property="og:image" content="img/og.jpg" />
+    <meta property="og:url" content="https://lifasg.com" />
+    <meta property="og:image" content="https://lifasg.com/v1/img/og.jpg" />
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
