Update about.html images

--- a/v1/about.html
+++ b/v1/about.html
@@ -78,24 +78,24 @@
     </div>
     <div class="row align-center medium-collapse large-collapse about-gallery">
       <div class="small-12 medium-4 columns">
-        <img src="../img/about-process_01.jpg">
+        <img src="img/about-process_01.jpg">
       </div>
       <div class="small-12 medium-4 columns">
-        <img src="../img/about-process_02.jpg">
+        <img src="img/about-process_02.jpg">
       </div>
       <div class="small-12 medium-4 columns">
-        <img src="../img/about-process_03.jpg">
+        <img src="img/about-process_03.jpg">
       </div>
     </div>
     <div class="row align-center medium-collapse large-collapse about-gallery-2">
       <div class="small-12 medium-4 columns">
-        <img src="../img/about-process_04.jpg">
+        <img src="img/about-process_04.jpg">
       </div>
       <div class="small-12 medium-4 columns">
-        <img src="../img/about-process_05.jpg">
+        <img src="img/about-process_05.jpg">
       </div>
       <div class="small-12 medium-4 columns">
-        <img src="../img/about-process_06.jpg">
+        <img src="img/about-process_06.jpg">
       </div>
     </div>
     <div class="row align-center">
