--- a/v1/accessories-holder.html
+++ b/v1/accessories-holder.html
@@ -71,8 +71,8 @@
           <li class="active">
             <a href="accessories.html">Accessories</a>
             <ul class="menu">
-              <li><a href="accessories-holder.html">Holder</a></li>
-              <li class="active"><a href="accessories-rack.html">Rack</a></li>
+              <li class="active"><a href="accessories-holder.html">Holder</a></li>
+              <li><a href="accessories-rack.html">Rack</a></li>
             </ul>
           </li>
         </ul>
