--- a/v1/sinks-cabinet.html
+++ b/v1/sinks-cabinet.html
@@ -7,9 +7,26 @@
     <title>Our Products | Lifa Ceramics</title>
     <meta name="author" content="James Liew Studio">
     <meta name="description" content="Lifa is a toilet accessories manufacturer in Singapore that provides a wide range of modern and high-quality sanitary ware. We produce sanitary ware with great aesthetics at a competitive price point." />
+    <meta property="og:title" content="Toilet Accessories Manufacturer in Singapore | Lifa Ceramics" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lifasg.com" />
+    <meta property="og:image" content="https://lifasg.com/v1/img/og.jpg" />
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script>
+        (function(d, w, c) {
+            w.ChatraID = 'iaDMj3TBvT8iDrAdg';
+            var s = d.createElement('script');
+            w[c] = w[c] || function() {
+                (w[c].q = w[c].q || []).push(arguments);
+            };
+            s.async = true;
+            s.src = (d.location.protocol === 'https:' ? 'https:': 'http:')
+            + '//call.chatra.io/chatra.js';
+            if (d.head) d.head.appendChild(s);
+        })(document, window, 'Chatra');
+    </script>
   </head>
   <body>
     <div class="row align-center">
@@ -156,12 +173,14 @@
       <div class="small-12 medium-6 columns">
         <h4>Mailing List</h4>
         <p>For the latest in Lifa Ceramics innovations, promotions, and more, sign up for our Newsletter!</p>
+        <form action="http://lifasg.us15.list-manage.com/subscribe/post?u=dd007352392351f3c786ca79c&amp;id=f0606b760a" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" data-abide novalidate>
         <div class="input-group f-form">
-          <input class="input-group-field" type="text" placeholder="Your email*">
+          <input class="input-group-field" type="text" placeholder="Your email*" name="EMAIL" required>
           <div class="input-group-button">
-            <input type="submit" class="button mlist" value="Get Updates">
+            <input type="submit" class="button mlist" value="Get Updates" name="subscribe">
           </div>
         </div>
+        </form>
       </div>
       <div class="small-12 medium-6 columns">
         <div class="row">
@@ -194,12 +213,16 @@
       </div>
       <div class="small-12 medium-6 columns">
         <p>
-          © 2017 Ecogreenify Pte. Ltd. All Rights Reserved
+          © <script language="javascript" type="text/javascript">
+              var today = new Date()
+              var year = today.getFullYear()
+              document.write(year)
+            </script> Ecogreenify Pte. Ltd. All Rights Reserved
         </p>
       </div>
       <div class="small-12 medium-6 columns">
         <ul class="social-list">
-          <li><a href="#"><img src="img/facebook.svg" style="width:30px;"></a></li>
+          <li><a href="https://www.facebook.com/lifaceramics/" target="_blank"><img src="img/facebook.svg" style="width:30px;"></a></li>
           <li><a href="#"><img src="img/wechat.svg" style="width:30px;"></a></li>
           <li><a href="#"><img src="img/alibaba.svg" style="width:50px;"></a></li>
           <li><a href="#"><img src="img/taobao.svg" style="width:30px;"></a></li>
@@ -211,6 +234,15 @@
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-90762530-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
