Edit contact page form spree

--- a/v1/contact.html
+++ b/v1/contact.html
@@ -72,23 +72,23 @@
         <form data-abide novalidate action="https://formspree.io/sales@lifasg.com" method="POST">
           <div class="row contact-form">
             <div class="medium-4 columns">
-              <input type="text" name="name" placeholder="Your name*" required>
+              <input type="text" name="Name" placeholder="Your name*" required>
               <span class="form-error">Your name is required.</span>
             </div>
             <div class="medium-4 columns float-left">
-              <input type="text" name="_replyto" placeholder="Your email*" required pattern="email">
+              <input type="text" name="Email Address" placeholder="Your email*" required pattern="email">
               <span class="form-error">A valid email address is required.</span>
             </div>
           </div>
           <div class="row contact-form">
             <div class="medium-4 columns">
-              <input type="text" name="contact no." placeholder="Contact no.*" required pattern="alpha_numeric">
+              <input type="text" name="Contact No." placeholder="Contact no.*" required pattern="alpha_numeric">
               <span class="form-error">Your contact number is required.</span>
             </div>
           </div>
           <div class="row contact-form">
             <div class="medium-12 columns">
-              <textarea placeholder="Ask your questions *" name="message" required></textarea>
+              <textarea placeholder="Ask your questions *" name="Message" required></textarea>
               <span class="form-error">Your forgot to leave us a message!</span>
             </div>
           </div>
